whitespace fix

--- a/sty/about_studio.styl
+++ b/sty/about_studio.styl
@@ -2,7 +2,7 @@
   font f_h2
   padding 50px 170px
 .profiles
-  background-color: c.white3
+  background-color: c.white1
   padding 0 0 33.333% 0
   > .profile
     width 25%
